# agenda-personal-c-

./: .gitignore  CMakeLists.txt  README.md  app.rc  vcpkg.json
installer/: AgendaPersonal.iss
shaders/: background.hlsl  blur_kawase.hlsl  fullscreen.hlsl  glass.hlsl
src/: main.cpp  resource.h
src/app/: Model.h  Scheduler.cpp  Scheduler.h  Store.cpp  Store.h  Theme.cpp  Theme.h  Ui.cpp  Ui.h  Util.cpp  Util.h
src/gfx/: D3DUtil.cpp  D3DUtil.h  GlassRenderer.cpp  GlassRenderer.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/net/: Email.cpp  Email.h  GoogleSync.cpp  GoogleSync.h  Http.cpp  Http.h  IcloudSync.cpp  IcloudSync.h  OAuthLoopback.cpp  OAuthLoopback.h
src/sys/: Autostart.cpp  Autostart.h  FileDialog.cpp  FileDialog.h  SingleInstance.cpp  SingleInstance.h  Tray.cpp  Tray.h
